fixed body not staying centered on smaller screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,8 @@
 
 body {
     display: flex;
+    justify-content: center;
+    align-items: space-between;
     flex-direction: column;
     background-color: var(--grey);
     color: var(--primary);
@@ -28,9 +30,10 @@ header {
     padding: 1%;
     background-color: var(--dark-grey);
     color: var(--primary);
-    min-width: 500px;
+    min-width: 100%;
 }
 
+/* Header styling */
 h1 {
     font-size: 150%;
 }
@@ -50,6 +53,7 @@ h4 {
     font-size: 150%;
 }
 
+/* Navigation styling */
 nav {
     background-color: var(--dark-grey);
     display: flex;
@@ -78,6 +82,7 @@ nav a:hover {
     color: var(--secondary);
 }
 
+/* about styling */
 #about {
     display: flex;
     justify-content: center;
@@ -100,19 +105,29 @@ nav a:hover {
     height: auto;
 }
 
-.work {
+/* styling work */
+#work {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+/* styling projects */
+.projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
-    flex-wrap: wrap;
     margin-bottom: 3%;
 }
 
+/* styling project cards */
 .card {
     flex: 1 0 0;
     text-align: center;
     max-width: 100%;
+    min-width: 50%;
 }
 
 .card img {
@@ -120,8 +135,7 @@ nav a:hover {
     border-color: var(--secondary);
     border-style: solid;
     margin-top: 1rem;
-    width: 50%;
-    min-width: 400px;
+    width: 75%;
 }
 
 .card img:hover {
@@ -129,10 +143,13 @@ nav a:hover {
     transition: .2s;
 }
 
+/* making first project card larger */
 #firstCard {
     min-width: 100%;
 }
 
+
+/* styling contact */
 #contact ul {
     display: flex;
     justify-content: center;
@@ -155,13 +172,14 @@ nav a:hover {
     color: var(--secondary);
 }
 
-figure {
+/* styling resume */
+#resume figure {
     display: flex;
     justify-content: center;
     padding: 2rem;
 }
 
-figure img {
+#resume figure img {
     border-radius: 2rem;
     border-color: var(--secondary);
     border-style: solid;
